--- a/index.html
+++ b/index.html
@@ -1,5 +1,13 @@
-<html>
-    <head>
-        <h1>EEEEEEEE</h1>
-    </head>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Home</title>
+
+    <h1>;-;</h1>
+</head>
+<body>
+    
+</body>
 </html>
