--- a/html/index-2.html
+++ b/html/index-2.html
@@ -133,7 +133,7 @@
     <div class="vg-page page-home" id="home" style="background-image: url(../assets/img/bg_image_2.jpg);">
       <div class="caption wow zoomInUp">
         <h1 class="fw-normal">Welcome</h1>
-        <h2 class="fw-medium fg-theme">I'm Stephen Doe</h2>
+        <h2 class="fw-medium fg-theme">blud</h2>
         <p class="tagline">UI/UX & Web Designer</p>
       </div>
     </div>
