--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
               <span class="ti-paint-bucket"></span>
             </div>
             <div class="caption">
-              <h4 class="fg-theme">Web Design</h4>
+              <h4 class="fg-theme">Game Development</h4>
               <p>There are many variations of passages of Lorem Ipsum available</p>
             </div>
           </div>
@@ -282,7 +282,7 @@
               <span class="ti-search"></span>
             </div>
             <div class="caption">
-              <h4 class="fg-theme">SEO</h4>
+              <h4 class="fg-theme">Programming</h4>
               <p>There are many variations of passages of Lorem Ipsum available</p>
             </div>
           </div>
