--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
         <div class="col-lg-6 offset-lg-1 wow fadeInRight">
           <h1 class="fw-light">Nigel van Maanen</h1>
           <h5 class="fg-theme mb-3">Game Developer</h5>
-          <p class="text-muted">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form but the majority have suffered alteration in some</p>
+          <p class="text-muted">I'm a passionate Game Developer with an eye for detail. I'm Experienced in Unity, Unreal Engine and I'm now also learing Godot. I'm always passionate to improve my skills and learn new things!</p>
           <ul class="theme-list">
             <li><b>From:</b> Utrecht, Netherlands</li>
             <li><b>Lives In:</b> Utrecht, Netherlands</li>
@@ -142,7 +142,7 @@
       <div class="row py-3">
         <div class="col-md-6">
           <div class="px-lg-3">
-            <h4 class="wow fadeInUp">General skills</h4>
+            <h4 class="wow fadeInUp">General</h4>
             <div class="progress-wrapper wow fadeInUp">
               <span class="caption">C#</span>
               <div class="progress">
@@ -171,7 +171,7 @@
         </div>
         <div class="col-md-6">
           <div class="px-lg-3">
-            <h4 class="wow fadeInUp">Engine Skills</h4>
+            <h4 class="wow fadeInUp">Engines</h4>
             <div class="progress-wrapper wow fadeInUp">
               <span class="caption">Unity</span>
               <div class="progress">
@@ -225,7 +225,7 @@
             </li>
           </ul>
         </div>
-        <div class="col-md-6 wow fadeInRight" data-wow-delay="200ms">
+        <!-- <div class="col-md-6 wow fadeInRight" data-wow-delay="200ms">
           <h2 class="fw-normal">Experience</h2>
           <ul class="timeline mt-4 pr-md-5">
             <li>
@@ -253,7 +253,7 @@
               </div>
             </li>
           </ul>
-        </div>
+        </div> -->
       </div>
     </div>
   </div>
@@ -293,7 +293,7 @@
               <span class="ti-vector"></span>
             </div>
             <div class="caption">
-              <h4 class="fg-theme">UI/UX Design</h4>
+              <h4 class="fg-theme">Game Design</h4>
               <p>There are many variations of passages of Lorem Ipsum available</p>
             </div>
           </div>
@@ -317,20 +317,20 @@
     <div class="container">
       <div class="row section-counter">
         <div class="col-md-6 col-lg-3 py-4 wow fadeIn">
-          <h1 class="number" data-number="768">768</h1>
-          <span>Clients</span>
+          <h1 class="number" data-number="100">100</h1>
+          <span>idk</span>
         </div>
         <div class="col-md-6 col-lg-3 py-4 wow fadeIn">
-          <h1 class="number" data-number="230">230</h1>
-          <span>Project Compleate</span>
+          <h1 class="number" data-number="100">100</h1>
+          <span>idk</span>
         </div>
         <div class="col-md-6 col-lg-3 py-4 wow fadeIn">
-          <h1 class="number" data-number="97">97</h1>
-          <span>Project Ongoing</span>
+          <h1 class="number" data-number="5">5</h1>
+          <span>Hours of sleep</span>
         </div>
         <div class="col-md-6 col-lg-3 py-4 wow fadeIn">
-          <h1 class="number" data-number="699">699</h1>
-          <span>Client Satisfaction</span>
+          <h1 class="number" data-number="6972">6972</h1>
+          <span>Cups of coffee</span>
         </div>
       </div>
     </div>
