--- a/index.html
+++ b/index.html
@@ -200,29 +200,21 @@
           <h2 class="fw-normal">Education</h2>
           <ul class="timeline mt-4 pr-md-5">
             <li>
-              <div class="title">2010</div>
+              <div class="title">2021 - present</div>
               <div class="details">
-                <h5>Specialize of course</h5>
-                <small class="fg-theme">University of Study</small>
-                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered</p>
+                <h5>Game Developer</h5>
+                <small class="fg-theme">Grafisch Lyceum Utrecht</small>
+                <p>Game Development, programming, design, marketing and everyting around it</p>
               </div>
             </li>
             <li>
-              <div class="title">2009</div>
+              <div class="title">2020 - 2021</div>
               <div class="details">
-                <h5>Specialize of course</h5>
-                <small class="fg-theme">University of Study</small>
-                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered</p>
+                <h5>Software Developer</h5>
+                <small class="fg-theme">ROC Midden Nederland</small>
+                <p>Web Development and Project Management.</p>
               </div>
-            </li>
-            <li>
-              <div class="title">2008</div>
-              <div class="details">
-                <h5>Specialize of course</h5>
-                <small class="fg-theme">University of Study</small>
-                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered</p>
-              </div>
-            </li>
+            </li>           
           </ul>
         </div>
         <!-- <div class="col-md-6 wow fadeInRight" data-wow-delay="200ms">
@@ -260,9 +252,9 @@
   
   <div class="vg-page page-service">
     <div class="container">
-      <div class="text-center wow fadeInUp">
+      <!-- <div class="text-center wow fadeInUp">
         <div class="badge badge-subhead">Service</div>
-      </div>
+      </div> -->
       <h1 class="fw-normal text-center wow fadeInUp">What can i do?</h1>
       <div class="row mt-5">
         <div class="col-md-6 col-lg-4 col-xl-3">
@@ -294,7 +286,7 @@
             </div>
             <div class="caption">
               <h4 class="fg-theme">Game Design</h4>
-              <p>There are many variations of passages of Lorem Ipsum available</p>
+              <p>ffffffffffffffffffffffffffffffffffffffffffffffff</p>
             </div>
           </div>
         </div>
@@ -354,15 +346,17 @@
       </div>
 
       <div class="gridder my-3">
-        <div class="grid-item apps wow zoomIn">
-          <div class="img-place" data-src="../assets/img/work/work-1.jpg" data-fancybox data-caption="<h5 class='fg-theme'>Mobile Travel App</h5> <p>Travel, Discovery</p>">
-            <img src="../assets/img/work/work-1.jpg" alt="">
-            <div class="img-caption">
-              <h5 class="fg-theme">Mobile Travel App</h5>
-              <p>Travel, Discovery</p>
+        <a href="Youtube.com">
+          <div class="grid-item apps wow zoomIn">
+            <div class="img-place" data-src="../assets/img/work/work-1.jpg" data-fancybox data-caption="<h5 class='fg-theme'>Mobile Travel App</h5> <p>Travel, Discovery</p>">
+              <img src="../assets/img/work/work-1.jpg" alt="">
+              <div class="img-caption">
+                <h5 class="fg-theme">StarFruit</h5>
+                <p>Potion brewing game, Dating sim</p>
+              </div>
             </div>
           </div>
-        </div>
+        </a>
         <div class="grid-item template wireframes wow zoomIn">
           <div class="img-place" data-src="../assets/img/work/work-2.jpg" data-fancybox data-caption="<h5 class='fg-theme'>Music App</h5> <p>Musics</p>">
             <img src="../assets/img/work/work-2.jpg" alt="">
