--- a/index.html
+++ b/index.html
@@ -252,6 +252,9 @@
   
   <div class="vg-page page-service">
     <div class="container">
+      <a href="Projects/StarFruit.html">
+        <p>test</p>
+      </a>
       <!-- <div class="text-center wow fadeInUp">
         <div class="badge badge-subhead">Service</div>
       </div> -->
