--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
 
       <div class="gridder my-3">
         <a href="Projects/StarFruit.html">
-          <div class="grid-item apps wow zoomIn">
+          <!--<div class="grid-item apps wow zoomIn">-->
             <div class="img-place" data-src="../assets/img/work/work-1.jpg" data-fancybox data-caption="<h5 class='fg-theme'>Mobile Travel App</h5> <p>Travel, Discovery</p>">
               <img src="../assets/img/work/work-1.jpg" alt="">
               <div class="img-caption">
@@ -358,7 +358,7 @@
                 <p>Potion brewing game, Dating sim</p>
               </div>
             </div>
-          </div>
+          <!--</div>-->
         </a>
         <div class="grid-item template wireframes wow zoomIn">
           <div class="img-place" data-src="../assets/img/work/work-2.jpg" data-fancybox data-caption="<h5 class='fg-theme'>Music App</h5> <p>Musics</p>">
