--- a/index.html
+++ b/index.html
@@ -252,9 +252,6 @@
   
   <div class="vg-page page-service">
     <div class="container">
-      <a href="Projects/StarFruit.html">
-        <p>test</p>
-      </a>
       <!-- <div class="text-center wow fadeInUp">
         <div class="badge badge-subhead">Service</div>
       </div> -->
@@ -349,17 +346,15 @@
       </div>
 
       <div class="gridder my-3">
-        <a href="Projects/StarFruit.html">
-          <div class="grid-item apps wow zoomIn">
-            <div class="img-place" data-src="../assets/img/work/work-1.jpg" data-fancybox data-caption="<h5 class='fg-theme'>Mobile Travel App</h5> <p>Travel, Discovery</p>">
-              <!--<img src="../assets/img/work/work-1.jpg" alt="">-->
-              <div class="img-caption">
-                <h5 class="fg-theme">StarFruit</h5>
-                <p>Potion brewing game, Dating sim</p>
-              </div>
-            <!--</div>-->
+        <div class="grid-item apps wow zoomIn">
+          <div class="img-place" data-src="../assets/img/work/work-1.jpg" data-fancybox data-caption="<h5 class='fg-theme'>Mobile Travel App</h5> <p>Travel, Discovery</p>">
+            <img src="../assets/img/work/work-1.jpg" alt="">
+            <div class="img-caption">
+              <h5 class="fg-theme">Mobile Travel App</h5>
+              <p>Travel, Discovery</p>
+            </div>
           </div>
-        </a>
+        </div>
         <div class="grid-item template wireframes wow zoomIn">
           <div class="img-place" data-src="../assets/img/work/work-2.jpg" data-fancybox data-caption="<h5 class='fg-theme'>Music App</h5> <p>Musics</p>">
             <img src="../assets/img/work/work-2.jpg" alt="">
