--- a/index.html
+++ b/index.html
@@ -350,7 +350,9 @@
           <div class="img-place" data-src="../assets/img/work/work-1.jpg" data-fancybox data-caption="<h5 class='fg-theme'>Mobile Travel App</h5> <p>Travel, Discovery</p>">
             <img src="../assets/img/work/work-1.jpg" alt="">
             <div class="img-caption">
-              <h5 class="fg-theme">Mobile Travel App</h5>
+              <a href="Projects/StarFruit.html">
+                <h5 class="fg-theme">Mobile Travel App</h5>
+              </a>
               <p>Travel, Discovery</p>
             </div>
           </div>
