--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
       <div class="gridder my-3">
         <a href="Projects/StarFruit.html">
           <div class="grid-item apps wow zoomIn">
-            <div class="img-place" data-src="../assets/img/work/work-2.jpg" data-fancybox data-caption="<h5 class='fg-theme'>Mobile Travel App</h5> <p>Travel, Discovery</p>">
+            <div class="img-place">
               <img src="../assets/img/work/work-1.jpg" alt="">
               <div class="img-caption">
                 <h5 class="fg-theme">Mobile Travel App</h5>
