--- a/Projects/StarFruit.html
+++ b/Projects/StarFruit.html
@@ -343,9 +343,32 @@
         <button class="btn btn-theme-outline" data-filter=".ui-ux">UI/UX</button>
         <button class="btn btn-theme-outline" data-filter=".graphic">Graphic</button>
         <button class="btn btn-theme-outline" data-filter=".wireframes">Wireframes</button>
+        <button class="btn btn-theme-outline" data-filter=".wireframes">VR</button>
       </div>
 
       <div class="gridder my-3">
+        <a href="Projects/StarFruit.html">
+          <div class="grid-item apps wow zoomIn">
+            <div class="img-place">
+              <img src="../assets/img/work/work-1.jpg" alt="">
+              <div class="img-caption">
+                <h5 class="fg-theme">StarFruit</h5>
+                <p>Travel, Discovery</p>
+              </div>
+            </div>
+          </div>
+        </a>
+        <a href="Projects/StarFruit.html">
+          <div class="grid-item VR wow zoomIn">
+            <div class="img-place">
+              <img src="../assets/img/work/work-1.jpg" alt="">
+              <div class="img-caption">
+                <h5 class="fg-theme">Mobile Travel App</h5>
+                <p>Travel, Discovery</p>
+              </div>
+            </div>
+          </div>
+        </a>
         <a href="Projects/StarFruit.html">
           <div class="grid-item apps wow zoomIn">
             <div class="img-place">
@@ -357,51 +380,39 @@
             </div>
           </div>
         </a>
-        <div class="grid-item template wireframes wow zoomIn">
-          <div class="img-place" data-src="../assets/img/work/work-2.jpg" data-fancybox data-caption="<h5 class='fg-theme'>Music App</h5> <p>Musics</p>">
-            <img src="../assets/img/work/work-2.jpg" alt="">
-            <div class="img-caption">
-              <h5 class="fg-theme">Music App</h5>
-              <p>Musics</p>
+        <a href="Projects/StarFruit.html">
+          <div class="grid-item apps wow zoomIn">
+            <div class="img-place">
+              <img src="../assets/img/work/work-1.jpg" alt="">
+              <div class="img-caption">
+                <h5 class="fg-theme">Mobile Travel App</h5>
+                <p>Travel, Discovery</p>
+              </div>
             </div>
           </div>
-        </div>
-        <div class="grid-item apps ios wow zoomIn">
-          <div class="img-place" data-src="../assets/img/work/work-3.jpg" data-fancybox data-caption="<h5 class='fg-theme'>Gaming Dashboard</h5> <p>Games, Streaming</p>">
-            <img src="../assets/img/work/work-3.jpg" alt="">
-            <div class="img-caption">
-              <h5 class="fg-theme">Gaming Dashboard</h5>
-              <p>Games, Streaming</p>
+        </a>
+        <a href="Projects/StarFruit.html">
+          <div class="grid-item apps wow zoomIn">
+            <div class="img-place">
+              <img src="../assets/img/work/work-1.jpg" alt="">
+              <div class="img-caption">
+                <h5 class="fg-theme">Mobile Travel App</h5>
+                <p>Travel, Discovery</p>
+              </div>
             </div>
           </div>
-        </div>
-        <div class="grid-item graphic ui-ux wow zoomIn">
-          <div class="img-place" data-src="../assets/img/work/work-4.jpg" data-fancybox data-caption="<h5 class='fg-theme'>Drugs Delivery App</h5> <p>Health, Drugs</p>">
-            <img src="../assets/img/work/work-4.jpg" alt="">
-            <div class="img-caption">
-              <h5 class="fg-theme">Drugs Delivery App</h5>
-              <p>Health, Drugs</p>
+        </a>
+        <a href="Projects/StarFruit.html">
+          <div class="grid-item apps wow zoomIn">
+            <div class="img-place">
+              <img src="../assets/img/work/work-1.jpg" alt="">
+              <div class="img-caption">
+                <h5 class="fg-theme">Mobile Travel App</h5>
+                <p>Travel, Discovery</p>
+              </div>
             </div>
           </div>
-        </div>
-        <div class="grid-item apps ios wow zoomIn">
-          <div class="img-place" data-src="../assets/img/work/work-5.jpg" data-fancybox data-caption="<h5 class='fg-theme'>Musics Discover</h5> <p>Musics, Dashboard</p>">
-            <img src="../assets/img/work/work-5.jpg" alt="">
-            <div class="img-caption">
-              <h5 class="fg-theme">Musics Discover</h5>
-              <p>Musics, Dashboard</p>
-            </div>
-          </div>
-        </div>
-        <div class="grid-item graphic ui-ux wireframes wow zoomIn">
-          <div class="img-place" data-src="../assets/img/work/work-6.jpg" data-fancybox data-caption="<h5 class='fg-theme'>Game Streaming</h5> <p>Games, Streaming</p>">
-            <img src="../assets/img/work/work-6.jpg" alt="">
-            <div class="img-caption">
-              <h5 class="fg-theme">Game Streaming</h5>
-              <p>Games, Streaming</p>
-            </div>
-          </div>
-        </div>
+        </a>
       </div> <!-- End gridder -->
       <div class="text-center wow fadeInUp">
         <a href="javascript:void(0)" class="btn btn-theme">Load More</a>
