--- a/index.html
+++ b/index.html
@@ -337,78 +337,79 @@
       <h1 class="text-center fw-normal wow fadeInUp">See my work</h1>
       <div class="filterable-button py-3 wow fadeInUp" data-toggle="selected">
         <button class="btn btn-theme-outline selected" data-filter="*">All</button>
-        <button class="btn btn-theme-outline" data-filter=".apps">Apps</button>
-        <button class="btn btn-theme-outline" data-filter=".template">Template</button>
-        <button class="btn btn-theme-outline" data-filter=".ios">IOS</button>
-        <button class="btn btn-theme-outline" data-filter=".ui-ux">UI/UX</button>
-        <button class="btn btn-theme-outline" data-filter=".graphic">Graphic</button>
-        <button class="btn btn-theme-outline" data-filter=".wireframes">Wireframes</button>
+        <button class="btn btn-theme-outline" data-filter=".3D">3D</button>
+        <button class="btn btn-theme-outline" data-filter=".2D">2D</button>
         <button class="btn btn-theme-outline" data-filter=".VR">VR</button>
+        <button class="btn btn-theme-outline" data-filter=".Unity">Unity</button>
+        <button class="btn btn-theme-outline" data-filter=".Unreal-Engine">Unreal Engine</button>
+        <button class="btn btn-theme-outline" data-filter=".Godot">Godot</button>
+        <button class="btn btn-theme-outline" data-filter=".School">School</button>
+        <button class="btn btn-theme-outline" data-filter=".Own-Projects">Own Projects</button>
       </div>
 
       <div class="gridder my-3">
         <a href="Projects/StarFruit.html">
-          <div class="grid-item apps wow zoomIn">
+          <div class="grid-item 2D Unity School wow zoomIn">
             <div class="img-place">
               <img src="../assets/img/work/work-1.jpg" alt="">
               <div class="img-caption">
-                <h5 class="fg-theme">Mobile Travel App</h5>
-                <p>Travel, Discovery</p>
+                <h5 class="fg-theme">StarFruit</h5>
+                <p>2D, Unity, School</p>
               </div>
             </div>
           </div>
         </a>
         <a href="Projects/StarFruit.html">
-          <div class="grid-item VR wow zoomIn">
+          <div class="grid-item 3D VR Unreal-Engine wow zoomIn">
             <div class="img-place">
               <img src="../assets/img/work/work-1.jpg" alt="">
               <div class="img-caption">
-                <h5 class="fg-theme">Mobile Travel App</h5>
-                <p>Travel, Discovery</p>
+                <h5 class="fg-theme">RTS</h5>
+                <p>3D, VR, Unreal Engine</p>
               </div>
             </div>
           </div>
         </a>
         <a href="Projects/StarFruit.html">
-          <div class="grid-item apps wow zoomIn">
+          <div class="grid-item VR Unreal-Engine wow zoomIn">
             <div class="img-place">
               <img src="../assets/img/work/work-1.jpg" alt="">
               <div class="img-caption">
-                <h5 class="fg-theme">Mobile Travel App</h5>
-                <p>Travel, Discovery</p>
+                <h5 class="fg-theme">BonAppMobile</h5>
+                <p>VR, Unreal Engine</p>
               </div>
             </div>
           </div>
         </a>
         <a href="Projects/StarFruit.html">
-          <div class="grid-item apps wow zoomIn">
+          <div class="grid-item 2D Unity School wow zoomIn">
             <div class="img-place">
               <img src="../assets/img/work/work-1.jpg" alt="">
               <div class="img-caption">
-                <h5 class="fg-theme">Mobile Travel App</h5>
-                <p>Travel, Discovery</p>
+                <h5 class="fg-theme">RatRace</h5>
+                <p>2D, Unity, School</p>
               </div>
             </div>
           </div>
         </a>
         <a href="Projects/StarFruit.html">
-          <div class="grid-item apps wow zoomIn">
+          <div class="grid-item 3D Unity School wow zoomIn">
             <div class="img-place">
               <img src="../assets/img/work/work-1.jpg" alt="">
               <div class="img-caption">
-                <h5 class="fg-theme">Mobile Travel App</h5>
-                <p>Travel, Discovery</p>
+                <h5 class="fg-theme">Twinstick</h5>
+                <p>3D, Unity, School</p>
               </div>
             </div>
           </div>
         </a>
         <a href="Projects/StarFruit.html">
-          <div class="grid-item apps wow zoomIn">
+          <div class="grid-item 3D Unity School wow zoomIn">
             <div class="img-place">
               <img src="../assets/img/work/work-1.jpg" alt="">
               <div class="img-caption">
-                <h5 class="fg-theme">Mobile Travel App</h5>
-                <p>Travel, Discovery</p>
+                <h5 class="fg-theme">Christmas Arena</h5>
+                <p>3D, Unity, School</p>
               </div>
             </div>
           </div>
