--- a/index.html
+++ b/index.html
@@ -414,6 +414,28 @@
             </div>
           </div>
         </a>
+        <a href="Projects/StarFruit.html">
+          <div class="grid-item Godot Own-Projects wow zoomIn">
+            <div class="img-place">
+              <img src="../assets/img/work/work-1.jpg" alt="">
+              <div class="img-caption">
+                <h5 class="fg-theme">Learning Godot</h5>
+                <p>Godot, Own Projects</p>
+              </div>
+            </div>
+          </div>
+        </a>
+        <a href="Projects/StarFruit.html">
+          <div class="grid-item 3D Unity Own-Projects wow zoomIn">
+            <div class="img-place">
+              <img src="../assets/img/work/work-1.jpg" alt="">
+              <div class="img-caption">
+                <h5 class="fg-theme">TowerDefence3D</h5>
+                <p>3D, Unity, Own Projects</p>
+              </div>
+            </div>
+          </div>
+        </a>
       </div> <!-- End gridder -->
       <div class="text-center wow fadeInUp">
         <a href="javascript:void(0)" class="btn btn-theme">Load More</a>
