--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
             <li><b>Age:</b> 20</li>
             <li><b>Gender:</b> Male</li>
           </ul>
-          <button class="btn btn-theme-outline">Download CV</button>
+          <!-- <button class="btn btn-theme-outline">Download CV</button> -->
         </div>
       </div>
     </div>
@@ -260,44 +260,44 @@
         <div class="col-md-6 col-lg-4 col-xl-3">
           <div class="card card-service wow fadeInUp">
             <div class="icon">
-              <span class="ti-paint-bucket"></span>
+              <span class="ti-game"></span>
             </div>
             <div class="caption">
               <h4 class="fg-theme">Game Development</h4>
-              <p>There are many variations of passages of Lorem Ipsum available</p>
+              <p>Making games. Mostly Experienced in Unity, Unreal Engine basics and now learning Godot</p>
             </div>
           </div>
         </div>
         <div class="col-md-6 col-lg-4 col-xl-3">
           <div class="card card-service wow fadeInUp">
             <div class="icon">
-              <span class="ti-star"></span>
+              <span class="ti-notepad"></span>
             </div>
             <div class="caption">
               <h4 class="fg-theme">Programming</h4>
-              <p>There are many variations of passages of Lorem Ipsum available</p>
+              <p>Experience in C# and also learning c++ adn Java</p>
             </div>
           </div>
         </div>
         <div class="col-md-6 col-lg-4 col-xl-3">
           <div class="card card-service wow fadeInUp">
             <div class="icon">
-              <span class="ti-vector"></span>
+              <span class="ti-palette"></span>
             </div>
             <div class="caption">
               <h4 class="fg-theme">Game Design</h4>
-              <p>ffffffffffffffffffffffffffffffffffffffffffffffff</p>
+              <p>Thinking about features, gameplay and also love doing mape design</p>
             </div>
           </div>
         </div>
         <div class="col-md-6 col-lg-4 col-xl-3">
           <div class="card card-service wow fadeInUp">
             <div class="icon">
-              <span class="ti-desktop"></span>
+              <span class="ti-world"></span>
             </div>
             <div class="caption">
               <h4 class="fg-theme">Web Development</h4>
-              <p>There are many variations of passages of Lorem Ipsum available</p>
+              <p>HTML, CSS and web design. Also some backend with PHP and SQL</p>
             </div>
           </div>
         </div>
@@ -345,13 +345,14 @@
         <button class="btn btn-theme-outline" data-filter=".Godot">Godot</button>
         <button class="btn btn-theme-outline" data-filter=".School">School</button>
         <button class="btn btn-theme-outline" data-filter=".Own-Projects">Own Projects</button>
+        <button class="btn btn-theme-outline" data-filter=".Small-Projects">Small Projects</button>
       </div>
 
       <div class="gridder my-3">
         <a href="Projects/StarFruit.html">
           <div class="grid-item 2D Unity School wow zoomIn">
             <div class="img-place">
-              <img src="../assets/img/work/work-1.jpg" alt="">
+              <img src="../assets/img/work/StarFruit.png" alt="">
               <div class="img-caption">
                 <h5 class="fg-theme">StarFruit</h5>
                 <p>2D, Unity, School</p>
