--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@
         <a href="Projects/StarFruit.html">
           <div class="grid-item 3D VR Unreal-Engine wow zoomIn">
             <div class="img-place">
-              <img src="../assets/img/work/work-1.jpg" alt="">
+              <img src="../assets/img/work/RTS.png" alt="">
               <div class="img-caption">
                 <h5 class="fg-theme">RTS</h5>
                 <p>3D, VR, Unreal Engine</p>
@@ -374,7 +374,7 @@
         <a href="Projects/StarFruit.html">
           <div class="grid-item VR Unreal-Engine wow zoomIn">
             <div class="img-place">
-              <img src="../assets/img/work/work-1.jpg" alt="">
+              <img src="../assets/img/work/BonAppMobile.png" alt="">
               <div class="img-caption">
                 <h5 class="fg-theme">BonAppMobile</h5>
                 <p>VR, Unreal Engine</p>
@@ -446,7 +446,7 @@
   
 
   <!-- Client -->
-  <div class="vg-page page-client">
+  <!-- <div class="vg-page page-client">
     <div class="container">
       <div class="row">
         <div class="col-md-6 col-lg-4 col-xl-3 item">
@@ -493,7 +493,7 @@
         </div>
       </div>
     </div>
-  </div> <!-- End client -->
+  </div> End client -->
   
   <!-- Contact -->
   <div class="vg-page page-contact" id="contact">
@@ -503,11 +503,11 @@
       </div>
       <h1 class="text-center fw-normal wow fadeInUp">Get in touch</h1>
       <div class="row py-5">
-        <div class="col-lg-7 px-0 pr-lg-3 wow zoomIn">
+        <!-- <div class="col-lg-7 px-0 pr-lg-3 wow zoomIn">
           <div class="vg-maps">
             <div id="google-maps" style="width: 100%; height: 100%;"></div>
           </div>
-        </div>
+        </div> -->
         <div class="col-lg-5">
           <form class="vg-contact-form">
             <div class="form-row">
@@ -533,16 +533,16 @@
   
   <!-- Footer -->
   <div class="vg-footer">
-    <h1 class="text-center">Virtual Folio</h1>
+    <h1 class="text-center">Contact</h1>
     <div class="container">
       <div class="row">
-        <div class="col-lg-4 py-3">
+        <!-- <div class="col-lg-4 py-3">
           <div class="footer-info">
             <p>Where to find me</p>
             <hr class="divider">
             <p class="fs-large fg-white">1600 Amphitheatre Parkway Mountain View, California 94043 US</p>
           </div>
-        </div>
+        </div> -->
         <div class="col-md-6 col-lg-3 py-3">
           <div class="float-lg-right">
             <p>Follow me</p>
@@ -560,9 +560,9 @@
             <p>Contact me</p>
             <hr class="divider">
             <ul class="list-unstyled">
-              <li>info@virtual.com</li>
-              <li>+8890234</li>
-              <li>+813023</li>
+              <li>nigelvanmaanen@outlook.com</li>
+              <!-- <li>+8890234</li>
+              <li>+813023</li> -->
             </ul>
           </div>
         </div>
@@ -579,9 +579,9 @@
             </div>
           </form>
         </div>
-        <div class="col-12">
+        <!-- <div class="col-12">
           <p class="text-center mb-0 mt-4">Copyright &copy;2020. All right reserved | This template is made with <span class="ti-heart fg-theme-red"></span> by <a href="https://www.macodeid.com/">MACode ID</a></p>
-        </div>
+        </div> -->
       </div>
     </div>
   </div> <!-- End footer -->
