--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
       <div class="row">
         <div class="col-lg-4 py-3">
           <div class="img-place wow fadeInUp">
-            <img src="../assets/img/person.jpg" alt="">
+            <img src="../assets/img/Walter.png" alt="">
           </div>
         </div>
         <div class="col-lg-6 offset-lg-1 wow fadeInRight">
@@ -543,7 +543,7 @@
             <p class="fs-large fg-white">1600 Amphitheatre Parkway Mountain View, California 94043 US</p>
           </div>
         </div> -->
-        <div class="col-md-6 col-lg-3 py-3">
+        <!-- <div class="col-md-6 col-lg-3 py-3">
           <div class="float-lg-right">
             <p>Follow me</p>
             <hr class="divider">
@@ -554,7 +554,7 @@
               <li><a href="#">Youtube</a></li>
             </ul>
           </div>
-        </div>
+        </div> -->
         <div class="col-md-6 col-lg-3 py-3">
           <div class="float-lg-right">
             <p>Contact me</p>
