--- a/index.html
+++ b/index.html
@@ -567,7 +567,7 @@
           </div>
         </div>
       </div>
-      <div class="row justify-content-center mt-3">
+      <!-- <div class="row justify-content-center mt-3">
         <div class="col-12 mb-3">
           <h3 class="fw-normal text-center">Subscribe</h3>
         </div>
@@ -578,7 +578,7 @@
               <input type="submit" class="btn btn-theme no-shadow" value="Subscribe">
             </div>
           </form>
-        </div>
+        </div> -->
         <!-- <div class="col-12">
           <p class="text-center mb-0 mt-4">Copyright &copy;2020. All right reserved | This template is made with <span class="ti-heart fg-theme-red"></span> by <a href="https://www.macodeid.com/">MACode ID</a></p>
         </div> -->
