--- a/Projects/StarFruit.html
+++ b/Projects/StarFruit.html
@@ -33,7 +33,7 @@ http://www.tooplate.com/view/2082-pure-mix
 
 	<!-- Main CSS
    ================================================== -->
-	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="css/StartfruitStyle.css">
 
 	<!-- Google web font 
    ================================================== -->	
