--- a/Projects/StarFruit.html
+++ b/Projects/StarFruit.html
@@ -124,92 +124,14 @@ http://www.tooplate.com/view/2082-pure-mix
                <!-- iso section -->
                <div class="iso-section wow fadeInUp" data-wow-delay="2.6s">
 
-                  <ul class="filter-wrapper clearfix">
+                <h2>jurgnhiujrdehngjuirdghnjruydfi</h2>
+                  <!-- <ul class="filter-wrapper clearfix">
                            <li><a href="#" data-filter="*" class="selected opc-main-bg">All</a></li>
                            <li><a href="#" class="opc-main-bg" data-filter=".graphic">Graphic</a></li>
                            <li><a href="#" class="opc-main-bg" data-filter=".template">Web template</a></li>
                            <li><a href="#" class="opc-main-bg" data-filter=".photoshop">Photoshop</a></li>
                         <li><a href="#" class="opc-main-bg" data-filter=".branding">Branding</a></li>
-                        </ul>
-
-                        <!-- iso box section -->
-                        <div class="iso-box-section wow fadeInUp" data-wow-delay="1s">
-                           <div class="iso-box-wrapper col4-iso-box">
-
-                              <div class="iso-box photoshop branding col-md-4 col-sm-6">
-                                 <div class="portfolio-thumb">
-                                    <img src="images/portfolio-img1.jpg" class="img-responsive" alt="Portfolio">
-                                       <div class="portfolio-overlay">
-                                          <div class="portfolio-item">
-                                                <a href="single-project.html"><i class="fa fa-link"></i></a>
-                                                <h2>Project One</h2>
-                                             </div>
-                                       </div>
-                                 </div>
-                              </div>
-
-                              <div class="iso-box graphic template col-md-4 col-sm-6">
-                                 <div class="portfolio-thumb">
-                                    <img src="images/portfolio-img2.jpg" class="img-responsive" alt="Portfolio">
-                                       <div class="portfolio-overlay">
-                                          <div class="portfolio-item">
-                                                <a href="single-project.html"><i class="fa fa-link"></i></a>
-                                                <h2>Project Two</h2>
-                                             </div>
-                                       </div>
-                                 </div>
-                              </div>
-
-                              <div class="iso-box template graphic col-md-4 col-sm-6">
-                                 <div class="portfolio-thumb">
-                                    <img src="images/portfolio-img3.jpg" class="img-responsive" alt="Portfolio">
-                                       <div class="portfolio-overlay">
-                                          <div class="portfolio-item">
-                                                <a href="single-project.html"><i class="fa fa-link"></i></a>
-                                                <h2>Project Three</h2>
-                                             </div>
-                                       </div>
-                                 </div>
-                              </div>
-
-                              <div class="iso-box graphic template col-md-4 col-sm-6">
-                                 <div class="portfolio-thumb">
-                                    <img src="images/portfolio-img4.jpg" class="img-responsive" alt="Portfolio">
-                                       <div class="portfolio-overlay">
-                                          <div class="portfolio-item">
-                                                <a href="single-project.html"><i class="fa fa-link"></i></a>
-                                                <h2>Project Four</h2>
-                                             </div>
-                                       </div>
-                                 </div>
-                              </div>
-
-                              <div class="iso-box photoshop branding col-md-4 col-sm-6">
-                                 <div class="portfolio-thumb">
-                                    <img src="images/portfolio-img5.jpg" class="img-responsive" alt="Portfolio">
-                                       <div class="portfolio-overlay">
-                                          <div class="portfolio-item">
-                                                <a href="single-project.html"><i class="fa fa-link"></i></a>
-                                                <h2>Project Five</h2>
-                                             </div>
-                                       </div>
-                                 </div>
-                              </div>
-
-                              <div class="iso-box graphic branding col-md-4 col-sm-6">
-                                 <div class="portfolio-thumb">
-                                    <img src="images/portfolio-img6.jpg" class="img-responsive" alt="Portfolio">
-                                       <div class="portfolio-overlay">
-                                          <div class="portfolio-item">
-                                                <a href="single-project.html"><i class="fa fa-link"></i></a>
-                                                <h2>Project Six</h2>
-                                             </div>
-                                       </div>
-                                 </div>
-                              </div>
-
-                            </div>
-                        </div>
+                    </ul> -->
 
                </div>
 
@@ -227,13 +149,13 @@ http://www.tooplate.com/view/2082-pure-mix
 
 			<div class="col-md-12 col-sm-12">
 				<p class="wow fadeInUp"  data-wow-delay="0.3s">Copyright © 2016 Your Company Name - Designed by Tooplate</p>
-				<ul class="social-icon wow fadeInUp"  data-wow-delay="0.6s">
+				<!-- <ul class="social-icon wow fadeInUp"  data-wow-delay="0.6s">
 					<li><a href="#" class="fa fa-facebook"></a></li>
 					<li><a href="#" class="fa fa-twitter"></a></li>
 					<li><a href="#" class="fa fa-dribbble"></a></li>
 					<li><a href="#" class="fa fa-behance"></a></li>
 					<li><a href="#" class="fa fa-google-plus"></a></li>
-				</ul>
+				</ul> -->
 			</div>
 			
 		</div>
