--- a/Projects/StarFruit.html
+++ b/Projects/StarFruit.html
@@ -103,8 +103,8 @@ http://www.tooplate.com/view/2082-pure-mix
 
 			<div class="col-md-offset-3 col-md-6 col-sm-offset-2 col-sm-8">
           <div class="header-thumb">
-              <h1 class="wow fadeIn" data-wow-delay="1.6s">Lorem ipsum dolor</h1>
-              <h3 class="wow fadeInUp" data-wow-delay="1.9s">Six HTML pages included</h3>
+              <h1 class="wow fadeIn" data-wow-delay="1.6s">StarFruit</h1>
+              <h3 class="wow fadeInUp" data-wow-delay="1.9s">A potion brewing and dating sim!</h3>
           </div>
 			</div>
 
@@ -125,13 +125,14 @@ http://www.tooplate.com/view/2082-pure-mix
                <div class="iso-section wow fadeInUp" data-wow-delay="2.6s">
 
                 <h2>jurgnhiujrdehngjuirdghnjruydfi</h2>
-                  <!-- <ul class="filter-wrapper clearfix">
-                           <li><a href="#" data-filter="*" class="selected opc-main-bg">All</a></li>
-                           <li><a href="#" class="opc-main-bg" data-filter=".graphic">Graphic</a></li>
-                           <li><a href="#" class="opc-main-bg" data-filter=".template">Web template</a></li>
-                           <li><a href="#" class="opc-main-bg" data-filter=".photoshop">Photoshop</a></li>
-                        <li><a href="#" class="opc-main-bg" data-filter=".branding">Branding</a></li>
-                    </ul> -->
+                    <ul class="filter-wrapper clearfix">
+                        <h2>jurgnhiujrdehngjuirdghnjruydfeeeeeeeeeeeeeeeee</h2>
+                        <!-- <li><a href="#" data-filter="*" class="selected opc-main-bg">All</a></li>
+                        <li><a href="#" class="opc-main-bg" data-filter=".graphic">Graphic</a></li>
+                        <li><a href="#" class="opc-main-bg" data-filter=".template">Web template</a></li>
+                        <li><a href="#" class="opc-main-bg" data-filter=".photoshop">Photoshop</a></li>
+                        <li><a href="#" class="opc-main-bg" data-filter=".branding">Branding</a></li> -->
+                    </ul>
 
                </div>
 
