--- a/Projects/StarFruit.html
+++ b/Projects/StarFruit.html
@@ -126,7 +126,7 @@ http://www.tooplate.com/view/2082-pure-mix
 
                 <h2>jurgnhiujrdehngjuirdghnjruydfi</h2>
                     <ul class="filter-wrapper clearfix">
-                        <h2>jurgnhiujrdehngjuirdghnjruydfeeeeeeeeeeeeeeeee</h2>
+                        <h2 class="opc-main-bg">jurgnhiujrdehngjuirdghnjruydfeeeeeeeeeeeeeeeee</h2>
                         <!-- <li><a href="#" data-filter="*" class="selected opc-main-bg">All</a></li>
                         <li><a href="#" class="opc-main-bg" data-filter=".graphic">Graphic</a></li>
                         <li><a href="#" class="opc-main-bg" data-filter=".template">Web template</a></li>
