--- a/Projects/StarFruit.html
+++ b/Projects/StarFruit.html
@@ -16,7 +16,7 @@ http://www.tooplate.com/view/2082-pure-mix
 
 	<!-- Site title
    ================================================== -->
-	<title>Pure Mix - HTML CSS Template</title>
+	<title>Starfruit</title>
 
 	<!-- Bootstrap CSS
    ================================================== -->
@@ -62,10 +62,10 @@ http://www.tooplate.com/view/2082-pure-mix
             <div class="row">
 
               <div class="brand">
-                <a href="index.html">Pure Mix</a>
+                <a href="index.html">Nigel van Maanen</a>
               </div>
 
-              <div class="navicon">
+              <!-- <div class="navicon">
                 <div class="menu-container">
 
                   <div class="circle dark inline">
@@ -85,7 +85,7 @@ http://www.tooplate.com/view/2082-pure-mix
                   </div>
 
                 </div>
-              </div>
+              </div> -->
 
             </div>
          </div>
