--- a/Projects/StarFruit.html
+++ b/Projects/StarFruit.html
@@ -103,7 +103,7 @@ http://www.tooplate.com/view/2082-pure-mix
 
 			<div class="col-md-offset-3 col-md-6 col-sm-offset-2 col-sm-8">
           <div class="header-thumb">
-              <h1 class="wow fadeIn" data-wow-delay="1.6s">StarFruit..</h1>
+              <h1 class="wow fadeIn" data-wow-delay="1.6s">StarFruit</h1>
               <h3 class="wow fadeInUp" data-wow-delay="1.9s">A potion brewing and dating sim!</h3>
           </div>
 			</div>
@@ -116,7 +116,7 @@ http://www.tooplate.com/view/2082-pure-mix
 <!-- Portfolio section
 ================================================== -->
 <section id="portfolio">
-    <h3>test gferysuahobdsssssdsdsdsdsss yeg hbaur hbyou iaryhgbyo uiheroyieahgyrsfgh ya hgryaugarheyuoyi ghyhery yer gf yuerhagyuhierghyueraghb yurghfabyagzhrehughyuerdi ghyeira ghyaeyrhvyaherg yhergayu igyeruhhygreyuhgfyreuafyagehruyfghre  ryehf gyhre gyrhae ghyareuyuare gfhyuer yureuyreigfuyeridryeghfyurer ighreiygf rireyu s7fgyueri uyiergyrre sygfhyeru ghers yreyyeryeriufghyregryeiuyryeidughf dsgref</h3>
+    <h3>test gferysuyeg hbaur hbyou iaryhgbyo uiheroyieahgyrsfgh ya hgryaugarheyuoyi ghyhery yer gf yuerhagyuhierghyueraghb yurghfabyagzhrehughyuerdi ghyeira ghyaeyrhvyaherg yhergayu igyeruhhygreyuhgfyreuafyagehruyfghre  ryehf gyhre gyrhae ghyareuyuare gfhyuer yureuyreigfuyeridryeghfyurer ighreiygf rireyu s7fgyueri uyiergyrre sygfhyeru ghers yreyyeryeriufghyregryeiuyryeidughf dsgref</h3>
    <div class="container">
       <div class="row">
 
