--- a/Projects/StarFruit.html
+++ b/Projects/StarFruit.html
@@ -116,14 +116,19 @@ http://www.tooplate.com/view/2082-pure-mix
 <!-- Portfolio section
 ================================================== -->
 <section id="portfolio">
-    <h3>test gferysuyeg hbaur hbyou iaryhgbyo uiheroyieahgyrsfgh ya hgryaugarheyuoyi ghyhery yer gf yuerhagyuhierghyueraghb yurghfabyagzhrehughyuerdi ghyeira ghyaeyrhvyaherg yhergayu igyeruhhygreyuhgfyreuafyagehruyfghre  ryehf gyhre gyrhae ghyareuyuare gfhyuer yureuyreigfuyeridryeghfyurer ighreiygf rireyu s7fgyueri uyiergyrre sygfhyeru ghers yreyyeryeriufghyregryeiuyryeidughf dsgref</h3>
    <div class="container">
-      <div class="row">
+      <div class="gameplayVideo">
+         <video src="Videos/Starfruit.mp4"></video>
+      </div>
+      <div class="gameText">
+         <h3>this is text</h3>
+      </div>
+      <!-- <div class="row">
 
          <div class="col-md-12 col-sm-12">
             
-               <!-- iso section -->
-               <!-- <div class="iso-section wow fadeInUp" data-wow-delay="2.6s">
+
+               <div class="iso-section wow fadeInUp" data-wow-delay="2.6s">
                     <ul class="filter-wrapper clearfix">
                         <li><a href="#" data-filter="*" class="selected opc-main-bg">All</a></li>
                         <li><a href="#" class="opc-main-bg" data-filter=".graphic">Graphic</a></li>
@@ -132,11 +137,11 @@ http://www.tooplate.com/view/2082-pure-mix
                         <li><a href="#" class="opc-main-bg" data-filter=".branding">Branding</a></li>
                     </ul>
 
-               </div> -->
+               </div>
 
          </div>
 
-      </div>
+      </div> -->
    </div>
 </section>
 
