--- a/Projects/StarFruit.html
+++ b/Projects/StarFruit.html
@@ -118,7 +118,7 @@ http://www.tooplate.com/view/2082-pure-mix
 <section id="portfolio">
    <div class="container">
       <div class="gameplayVideo">
-         <video src="Videos/Starfruit.mp4"></video>
+         <video controls src="Videos/Starfruit.mp4" width="700">
       </div>
       <div class="gameText">
          <h3>this is text</h3>
