--- a/Projects/StarFruit.html
+++ b/Projects/StarFruit.html
@@ -115,7 +115,7 @@ http://www.tooplate.com/view/2082-pure-mix
 
 <!-- Portfolio section
 ================================================== -->
-<section id="portfolio">
+<!-- <section id="portfolio">
    <div class="container">
       <div class="gameplayVideo">
          <video controls src="Videos/Starfruit.mp4" width="33%">
@@ -123,7 +123,7 @@ http://www.tooplate.com/view/2082-pure-mix
       <div class="gameText">
          <h3>this is text</h3>
       </div>
-      <!-- <div class="row">
+      <div class="row">
 
          <div class="col-md-12 col-sm-12">
             
@@ -141,9 +141,17 @@ http://www.tooplate.com/view/2082-pure-mix
 
          </div>
 
-      </div> -->
+      </div>
    </div>
-</section>
+</section> -->
+
+<div class="wrapper">
+   <video id="gamevideo" src="Videos/Starfruit.mp4">
+   <div class="text-box">
+      <h2>irgdujhuijtrdhguijrtfdh</h2>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio natus, reprehenderit quidem, similique porro alias cum eos aliquam consequuntur iste sequi vero nulla earum necessitatibus velit minus minima id impedit inventore praesentium nam neque esse quasi fugit. Dolorum perferendis vel, cumque eum sunt cupiditate doloribus vero eos? Corrupti, dolor nostrum!</p>
+   </div>
+</div>
 
 <!-- Footer section
 ================================================== -->
