--- a/Projects/StarFruit.html
+++ b/Projects/StarFruit.html
@@ -146,7 +146,9 @@ http://www.tooplate.com/view/2082-pure-mix
 </section> -->
 
 <div class="wrapper">
-   <video id="gamevideo" controls src="Videos/Starfruit.mp4"><video>
+   <div>
+      <video id="gamevideo" controls src="Videos/Starfruit.mp4"><video>
+   </div>
    <div class="text-box">
       <h2>irgdujhuijtrdhguijrtfdh</h2>
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio natus, reprehenderit quidem, similique porro alias cum eos aliquam consequuntur iste sequi vero nulla earum necessitatibus velit minus minima id impedit inventore praesentium nam neque esse quasi fugit. Dolorum perferendis vel, cumque eum sunt cupiditate doloribus vero eos? Corrupti, dolor nostrum!</p>
