--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@
             </div>
           </div>
         </a>
-        <a href="Projects/StarFruit.html">
+        <a href="Projects/RTS.html">
           <div class="grid-item 3D VR Unreal-Engine wow zoomIn">
             <div class="img-place">
               <img src="../assets/img/work/RTS.png" alt="">
@@ -371,7 +371,7 @@
             </div>
           </div>
         </a>
-        <a href="Projects/StarFruit.html">
+        <a href="Projects/BonAppMobile.html">
           <div class="grid-item VR Unreal-Engine wow zoomIn">
             <div class="img-place">
               <img src="../assets/img/work/BonAppMobile.png" alt="">
