--- a/Projects/RTS.html
+++ b/Projects/RTS.html
@@ -90,10 +90,10 @@ http://www.tooplate.com/view/2082-pure-mix
 ================================================== -->
 <div class="wrapper">
    <div class="text-box">
-      <h2>About Starfruit</h2>
-      <p>Starfruit is a potion brewing and dating simulation game. The player takes orders from the clients and puts these orders together using the different stations. if you make the order correctly, you'll see the client gains a heart. when you get to 3 hearts with one client, you can go on a date with that client. you can also lose hearts when you make the order incorrectly.<br></p>
+      <h2>About RTS</h2>
+      <p>"RTS" is as the title says, a real time stragety game. In this game there are 2 teams, which both have a base buidling (the nexus), which they need to protect from the other team. players can build barracks to train troops to attack the other team. there are also defence towers which the player can build to defend itself from other troops. the team that manages to destroy the other team's nexus, wins the game!<br></p>
       <h2>About Project</h2>
-      <p>This was a 6 week long school project. The goal of this project was to make a complete game and then release it on Itch.io. The development time for the game itself was 4 weeks (12 days) plus 2 weeks (6 days) time for polishment. our team consisted of 4 artists and 1 developer (wich is me)</p>
+      <p>This project is made by a bigger group of students (17 students) from the Media Collage Amsterdam and Grafisch Lyceum Utrecht. In this project students would learn more about how to work in a smaller team (yet bigger than the normal teams at school) using scrum. We also used Unreal Engine instead of Unity, which we normally use in school. I was one of the developers on this project and was mainly responsible for the barracks. The project was about 10 weeks long</p>
    </div>
    <div>
       <video id="gamevideo" controls src="Videos/Starfruit.mp4"><video>
