--- a/index.html
+++ b/index.html
@@ -382,7 +382,7 @@
             </div>
           </div>
         </a>
-        <a href="Projects/StarFruit.html">
+        <a href="Projects/RatRace.html">
           <div class="grid-item 2D Unity School wow zoomIn">
             <div class="img-place">
               <img src="../assets/img/work/Ratrace.png" alt="">
