--- a/index.html
+++ b/index.html
@@ -91,12 +91,6 @@
             <li class="nav-item">
               <a href="#portfolio" class="nav-link" data-animate="scrolling">Portfolio</a>
             </li>
-            <li class="nav-item">
-              <a href="#blog" class="nav-link" data-animate="scrolling">Blog</a>
-            </li>
-            <li class="nav-item">
-              <a href="#contact" class="nav-link" data-animate="scrolling">Contact</a>
-            </li>
           </ul>
           <ul class="nav ml-auto">
             <li class="nav-item">
@@ -275,7 +269,7 @@
             </div>
             <div class="caption">
               <h4 class="fg-theme">Programming</h4>
-              <p>Experience in C# and also learning c++ adn Java</p>
+              <p>Experience in C# and also learning c++ and Java</p>
             </div>
           </div>
         </div>
@@ -286,7 +280,7 @@
             </div>
             <div class="caption">
               <h4 class="fg-theme">Game Design</h4>
-              <p>Thinking about features, gameplay and also love doing mape design</p>
+              <p>Thinking about features, gameplay and I also love doing map design</p>
             </div>
           </div>
         </div>
@@ -309,12 +303,8 @@
     <div class="container">
       <div class="row section-counter">
         <div class="col-md-6 col-lg-3 py-4 wow fadeIn">
-          <h1 class="number" data-number="100">100</h1>
-          <span>idk</span>
-        </div>
-        <div class="col-md-6 col-lg-3 py-4 wow fadeIn">
-          <h1 class="number" data-number="100">100</h1>
-          <span>idk</span>
+          <h1 class="number" data-number="3">3</h1>
+          <span>Years of experience</span>
         </div>
         <div class="col-md-6 col-lg-3 py-4 wow fadeIn">
           <h1 class="number" data-number="5">5</h1>
@@ -494,43 +484,7 @@
       </div>
     </div>
   </div> End client -->
-  
-  <!-- Contact -->
-  <div class="vg-page page-contact" id="contact">
-    <div class="container-fluid">
-      <div class="text-center wow fadeInUp">
-        <div class="badge badge-subhead">Contact</div>
-      </div>
-      <h1 class="text-center fw-normal wow fadeInUp">Get in touch</h1>
-      <div class="row py-5">
-        <!-- <div class="col-lg-7 px-0 pr-lg-3 wow zoomIn">
-          <div class="vg-maps">
-            <div id="google-maps" style="width: 100%; height: 100%;"></div>
-          </div>
-        </div> -->
-        <div class="col-lg-5">
-          <form class="vg-contact-form">
-            <div class="form-row">
-              <div class="col-12 mt-3 wow fadeInUp">
-                <input class="form-control" type="text" name="Name" placeholder="Your Name">
-              </div>
-              <div class="col-6 mt-3 wow fadeInUp">
-                <input class="form-control" type="text" name="Email" placeholder="Email Address">
-              </div>
-              <div class="col-6 mt-3 wow fadeInUp">
-                <input class="form-control" type="text" name="Subject" placeholder="Subject">
-              </div>
-              <div class="col-12 mt-3 wow fadeInUp">
-                <textarea class="form-control" name="Message" rows="6" placeholder="Enter message here.."></textarea>
-              </div>
-              <button type="submit" class="btn btn-theme mt-3 wow fadeInUp ml-1">Send Message</button>
-            </div>
-          </form>
-        </div>
-      </div>
-    </div>
-  </div> <!-- End Contact -->
-  
+   
   <!-- Footer -->
   <div class="vg-footer">
     <h1 class="text-center">Contact</h1>
