--- a/Projects/BonAppMobile.html
+++ b/Projects/BonAppMobile.html
@@ -96,7 +96,7 @@ http://www.tooplate.com/view/2082-pure-mix
       <p>This is a VR project made by a bigger group of students (17 students) from the Grafisch Lyceum Utrecht and Media Collage Amsterdam. The goal of the project was to learn how to work in a smaller team (yet bigger than the teams we normally have at school) using scrum. We also learned Unreal Engine instead of using unity like we normally do at school. I was one of the developers on this project and was mainly focused on the oven and baking pizza. The project was about 10 weeks long</p>
    </div>
    <div>
-      <video id="gamevideo" controls src="Videos/Starfruit.mp4"><video>
+      <img id="gameImage" src="images/pizza.png">
    </div>
 </div>
 
