--- a/Projects/ChristmasArena.html
+++ b/Projects/ChristmasArena.html
@@ -96,7 +96,7 @@ http://www.tooplate.com/view/2082-pure-mix
       <p>This is an old small school project of like 2 or 3 weeks. Out team consisted of 3 developers. I was more of a support developer in this project who was there to help and fix bugs etc, so I didn't do a lot of programming, but I did make the entire map.</p>
    </div>
    <div>
-      <video id="gamevideo" controls src="Videos/Starfruit.mp4"><video>
+      <img id="gamevideo" src="images/ChristmasTree.PNG">
    </div>
 </div>
 
