--- a/Projects/TwinStick.html
+++ b/Projects/TwinStick.html
@@ -96,7 +96,7 @@ http://www.tooplate.com/view/2082-pure-mix
       <p>This was the first "big" school project at the end of my first year. The project was to make a TwinStick game and apparently we didn't bother to give it a name back then.. The project was about 8 weeks long for what I remember and our team consisted of 4 people (2 devs and 2 artists). As one of the devs I was monstly reponsible for the skill point system, wands and the lot of cheatcodes..</p>
    </div>
    <div>
-      <video id="gamevideo" controls src="Videos/Starfruit.mp4"><video>
+      <img id="gamevideo" src="images/skull.PNG">
    </div>
 </div>
 
