--- a/index.html
+++ b/index.html
@@ -423,7 +423,7 @@
         <a href="Projects/TowerDefence3D.html">
           <div class="grid-item 3D Unity Own-Projects wow zoomIn">
             <div class="img-place">
-              <img src="../assets/img/work/work-1.jpg" alt="">
+              <img src="../assets/img/work/Tower.png" alt="">
               <div class="img-caption">
                 <h5 class="fg-theme">TowerDefence3D</h5>
                 <p>3D, Unity, Own Projects</p>
