--- a/Projects/TowerDefence3D.html
+++ b/Projects/TowerDefence3D.html
@@ -96,7 +96,7 @@ http://www.tooplate.com/view/2082-pure-mix
       <p></p>
    </div>
    <div>
-      <img id="gamevideo" src="images/GodotLogo.png">
+      <img id="gamevideo" src="images/Tower.png">
    </div>
 </div>
 
