--- a/index.html
+++ b/index.html
@@ -398,6 +398,17 @@
             </div>
           </div>
         </a>
+        <a href="Projects/RandomMaze.html">
+          <div class="grid-item 3D Unity Own-Projects wow zoomIn">
+            <div class="img-place">
+              <img src="../assets/img/work/MazeGenerator.PNG" alt="">
+              <div class="img-caption">
+                <h5 class="fg-theme">Random Maze Generator</h5>
+                <p>2D, Unity, Own Projects, Small Projects</p>
+              </div>
+            </div>
+          </div>
+        </a>
         <a href="Projects/ChristmasArena.html">
           <div class="grid-item 3D Unity School wow zoomIn">
             <div class="img-place">
