added and changed some pages

--- a/Projects/TowerDefence3D.html
+++ b/Projects/TowerDefence3D.html
@@ -92,11 +92,23 @@ http://www.tooplate.com/view/2082-pure-mix
    <div class="text-box">
       <h2>About TowerDefence3D</h2>
       <p>Tower Defence 3D is not the devenitive name of the game. The game is a tower defence game with a twist. Towers will deal different type of damage and entities will have different types of immunities. there will also be a PVP mode where 2 player have to send troops to the other team's track in order to destroy their tower.<br></p>
+      <h2>About Project</h2>
+      <p>I started this project just for fun and because i thought that tower defence is a good game to learn coding. In tower defence you need to make al kind of stuff, like: pathfinding, targeting, health system, build system and more.</p>
+   </div>
+   <div>
+      <img id="gamevideo" src="images/Tower.png">
+   </div>
+</div>
+
+<div class="code">
+   <div class="text-box">
+      <h2>Towers</h2>
+      <p>for the targeting of the towers, I get all "enemies" in its range and check if the tower can even target these enemies because there are different types of enemies. For now I just get a random enemy to focus on, but this will later be changed to the enemy that is the furthest on the track. First I will need to find a better way to get all enemies in the tower's range, because the overlap I use now is pretty heavy on the cpu and will cause lag when you have a lot of towers.<br></p>
       <h2></h2>
       <p></p>
    </div>
    <div>
-      <img id="gamevideo" src="images/Tower.png">
+      <img src>
    </div>
 </div>
 
