--- a/Projects/StarFruit.html
+++ b/Projects/StarFruit.html
@@ -165,11 +165,20 @@ http://www.tooplate.com/view/2082-pure-mix
    <div class="text-box">
       <h2>System</h2>
       <p>At the start of this project I had to think about how I was going to build the system. In the game players have to be able to pour different ingredients into the couldron, pour that into a flask and serve it to the client. I had to think of a way where I don't have to make all type of refrences to objects etc because that would get messy pretty fast. Eventually I desided to use enums. All ingredients and decorations have thair own ingredienttype wich will be put into the list in the couldron and flask. this way I don't have to make refrences and I can easily compare the flask list with the client's order list to look of the order is made correclty.<br></p>
-      <h2>About Project</h2>
-      <p>This is an older school project. The goal of the project was to build a simple 3D or 2D night racer. The project was about 6 weeks long and our team consisted of 4 people (2 devs and 2 artists). As a dev on this project, I was mainly responible for the steering mechanic and the power ups.</p>
+      <h2></h2>
+      <p></p>
    </div>
    <div>
-      <img src>
+      <img src="images/Code/Cauldron.PNG">
+   </div>
+   <div class="text-box">
+      <h2>Dialogue system</h2>
+      <p>In the game, after you served the same custommer multiple times and have gotten a bond with them, they will ask you for a date. For this date I had to build a dialogue system. The problem was that we didn't have that much time left for the project. So instead of making something complex, I made it in a bit simpler with coroutines, with the thought of maybe fixing it later when i would have more time. This I did so we atleast had something that worked when handing in our work.<br></p>
+      <h2></h2>
+      <p></p>
+   </div>
+   <div>
+      <img src="">
    </div>
 </div>
 
