--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
         <div class="col-lg-6 offset-lg-1 wow fadeInRight">
           <h1 class="fw-light">Nigel van Maanen</h1>
           <h5 class="fg-theme mb-3">Game Developer</h5>
-          <p class="text-muted">I'm a passionate Game Developer with an eye for detail. I'm Experienced in Unity, Unreal Engine and I'm now also learing Godot. I'm always passionate to improve my skills and learn new things!</p>
+          <p class="text-muted">Hi, I'm Nigel van Maanen. I'm a passionate Game Developer with an eye for detail. I'm Experienced in Unity, Unreal Engine and I'm now also learing Godot. I'm currently studying Game Development at Grafisch Lyceum Utrecht. I'm always passionate to improve my skills and learn new things!</p>
           <ul class="theme-list">
             <li><b>From:</b> Utrecht, Netherlands</li>
             <li><b>Lives In:</b> Utrecht, Netherlands</li>
@@ -140,25 +140,31 @@
             <div class="progress-wrapper wow fadeInUp">
               <span class="caption">C#</span>
               <div class="progress">
-                <div class="progress-bar" role="progressbar" style="width: 80%;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">80%</div>
+                <div class="progress-bar" role="progressbar" style="width: 80%;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">Very good</div>
               </div>
             </div>
             <div class="progress-wrapper wow fadeInUp">
               <span class="caption">Scrum</span>
               <div class="progress">
-                <div class="progress-bar" role="progressbar" style="width: 80%;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">80%</div>
+                <div class="progress-bar" role="progressbar" style="width: 80%;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">Very good</div>
+              </div>
+            </div>
+            <div class="progress-wrapper wow fadeInUp">
+              <span class="caption">GitHub</span>
+              <div class="progress">
+                <div class="progress-bar" role="progressbar" style="width: 75%;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">good</div>
               </div>
             </div>
             <div class="progress-wrapper wow fadeInUp">
               <span class="caption">Web Development</span>
               <div class="progress">
-                <div class="progress-bar" role="progressbar" style="width: 70%;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">70%</div>
+                <div class="progress-bar" role="progressbar" style="width: 60%;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">Experienced</div>
               </div>
             </div>
             <div class="progress-wrapper wow fadeInUp">
               <span class="caption">Game Design</span>
               <div class="progress">
-                <div class="progress-bar" role="progressbar" style="width: 75%;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">75%</div>
+                <div class="progress-bar" role="progressbar" style="width: 75%;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">Experienced</div>
               </div>
             </div>
           </div>
@@ -169,19 +175,19 @@
             <div class="progress-wrapper wow fadeInUp">
               <span class="caption">Unity</span>
               <div class="progress">
-                <div class="progress-bar" role="progressbar" style="width: 75%;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">75%</div>
+                <div class="progress-bar" role="progressbar" style="width: 80%;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">Very good</div>
               </div>
             </div>
             <div class="progress-wrapper wow fadeInUp">
               <span class="caption">Unreal Engine</span>
               <div class="progress">
-                <div class="progress-bar" role="progressbar" style="width: 40%;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">40%</div>
+                <div class="progress-bar" role="progressbar" style="width: 55%;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">Experienced</div>
               </div>
             </div>
             <div class="progress-wrapper wow fadeInUp">
-              <span class="caption">Godot (Learning)</span>
+              <span class="caption">Godot</span>
               <div class="progress">
-                <div class="progress-bar" role="progressbar" style="width: 30%;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">30%</div>
+                <div class="progress-bar" role="progressbar" style="width: 38%;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">Learning</div>
               </div>
             </div>
           </div>
@@ -206,7 +212,7 @@
               <div class="details">
                 <h5>Software Developer</h5>
                 <small class="fg-theme">ROC Midden Nederland</small>
-                <p>Web Development and Project Management.</p>
+                <p>Web Development (front end & back end) and Project Management.</p>
               </div>
             </li>           
           </ul>
